--- a/hi.html
+++ b/hi.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <h1>fgsdgsdfg</h1>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi atque laborum pariatur tempora veniam natus cupiditate doloremque omnis animi aliquam accusantium quidem, voluptatum ratione culpa ad sed, qui quis explicabo.</p>
 <script src="/js.js"></script>  
 </body>
 </html>
